# anyskin

./: .gitignore  .pre-commit-config.yaml  LICENSE  MANIFEST.in  README.md  pyproject.toml  setup.py
.github/workflows/: anyskin.yml  default.yml
anyskin/: __init__.py  sensor.py  sensor_proc.py
anyskin/visualizations/: anyskin_viz.py  heatmap.py
arduino/: README.md
arduino/5X_binary_burst_stream/: 5X_binary_burst_stream.ino
arduino/5X_burst_stream/: 5X_burst_stream.ino
circuits/: README.md
reskin_sensor/: __init__.py  sensor.py  sensor_proc.py
tests/: sensor_proc_test.py  sensor_test.py
visualizations/: anyskin_viz.py  heatmap.py  pygame_demo.py
