[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"
[project]
name = "anyskin"
version = "1.0.0"
authors = [
  { name="Raunaq Bhirangi", email="raunaqbhirangi@nyu.edu" },
]
description = "Python library for interfacing with an AnySkin sensor"
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
Homepage = "https://github.com/raunaqbhirangi/anyskin"
Issues = "https://github.com/raunaqbhirangi/anyskin/issues"
Project = "https://any-skin.github.io/"
